Update tomcat.sh